# imu_mnist

./: .gitignore  CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf  test.jdebug
Physical Build/: battery_holder.f3d  battery_holder.stl  cover_laser_cut.stl
include/: hog.h  imu.h  main.h  state_machine.h
include/Fusion/: Fusion.h
model-parameters/: model_metadata.h  model_variables.h
pytorch_training_code/: best_model.pth  best_model_0.88.pth  convert_pth_to_onnx.py  create_json_data.py  create_npy.py  ei.ipynb  export.ipynb  forumpost.py  model.onnx  model.pth  model1layer.onnx  model_.88.onnx  model_0.88_nosm.onnx  model_simple.onnx  modelnolayer.onnx  test_inference.py  test_train.py  validation_data.npy
pytorch_training_code/dataset/: ei_dataset.py
pytorch_training_code/generated_json_data/: 0.0.json  0.1.json  0.10.json  0.11.json  0.12.json  0.13.json  0.2.json  0.3.json  0.4.json  0.5.json  0.6.json  0.7.json  0.8.json  0.9.json  1.14.json  1.15.json  1.16.json  1.17.json  1.18.json  1.19.json  1.20.json  1.21.json  1.22.json  1.23.json  1.24.json  1.25.json  1.26.json  2.27.json  2.28.json  2.29.json  2.30.json  2.31.json  2.32.json  2.33.json  2.34.json  2.35.json  2.36.json  2.37.json  2.38.json  2.39.json  (+91 more)
pytorch_training_code/models/: append_softmax.py  resnet1d.py
src/: blink.cpp  blue.c  hog.c  imu copy.cpp.bkp  imu.c  imu.cpp  imu_old.cpp.bkp  jb_mono_bold.c  lvgl.c  lvgl.cpp  main.c  main.cpp
tflite-model/: tflite_learn_11_compiled.cpp  tflite_learn_11_compiled.h  tflite_learn_12_compiled.cpp  tflite_learn_12_compiled.h  tflite_learn_5_compiled.cpp  tflite_learn_5_compiled.h  tflite_learn_6_compiled.cpp  tflite_learn_6_compiled.h
(+595 files in other folders)
